Add Gradle wrapper, initial runtime classes, and CLI structure
- Added Gradle wrapper files for project builds and dependency management.
- Implemented initial runtime classes: `AionValue`, `Environment`, and `AionRuntimeException`.
- Introduced CLI structure using `picocli` with commands for running, checking, and a REPL.
- Created a `STATUS.md` file to describe project progress and plans.
- Initialized `CHANGELOG.md` for tracking notable changes.